syntax = "proto3";

option csharp_namespace = "Chat.Grpc.Server.Protos";

package chat;

service ChatServer {
  rpc ConnectUser (ConnectUserRequest) returns (ConnectUserResponse);
  rpc CreateChatRoom (CreateChatRoomRequest) returns (CreateChatRoomResponse);
  rpc JoinChatRoom (JoinChatRoomRequest) returns (JoinChatRoomResponse);
  rpc LeaveChatRoom (LeaveChatRoomRequest) returns (LeaveChatRoomResponse);
  rpc GetAllChatRooms (GetAllRoomsRequest) returns (ListRoomsResponse);
}

message GetAllRoomsRequest{

}

message ListRoomsResponse{
	repeated string room_name = 1;
}

message ConnectUserRequest {
  string username = 1;
}

message ConnectUserResponse {
  bool success  = 1;
  string reason = 2;
  string username = 3;
}

message CreateChatRoomRequest {
  string room_name = 1;
  string username = 2;
}

message CreateChatRoomResponse {
  bool success  = 1;
  string reason = 2;
  string room_name = 3;
}

message JoinChatRoomRequest {
  string room_name = 1;
  string username = 2;
}

message JoinChatRoomResponse {
  bool success  = 1;
  string reason = 2;
  string username = 3;
}

message LeaveChatRoomRequest {
  string username = 1;
}

message LeaveChatRoomResponse {
  string username = 1;
  bool success  = 2;
}
